repo wiki update

--- a/.qoder/repowiki/zh/content/安装与配置.md
+++ b/.qoder/repowiki/zh/content/安装与配置.md
@@ -2,25 +2,34 @@
 
 <cite>
 **本文档中引用的文件**  
-- [pyproject.toml](file://pyproject.toml)
+- [pyproject.toml](file://pyproject.toml) - *更新了版本号*
+- [AGENTS.md](file://AGENTS.md) - *新增文件，详细说明AI代理集成*
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py) - *更新了AI选择列表*
 - [CONTRIBUTING.md](file://CONTRIBUTING.md)
 - [README.md](file://README.md)
-- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py)
 </cite>
+
+## 更新摘要
+**变更内容**   
+- 新增 **AI助手支持** 章节，详细介绍新集成的AI代理（如Windsurf）
+- 在 **初始化项目：`specify init` 命令详解** 部分更新了支持的AI助手列表
+- 在 **开发者配置建议** 部分补充了新的AI编码助手要求
+- 所有相关部分均已根据 `AGENTS.md` 和 `__init__.py` 的最新更改进行同步
 
 ## 目录
 1. [简介](#简介)
 2. [项目结构](#项目结构)
 3. [环境依赖与包管理](#环境依赖与包管理)
 4. [初始化项目：`specify init` 命令详解](#初始化项目specify-init-命令详解)
-5. [配置文件与自定义选项](#配置文件与自定义选项)
-6. [常见安装问题与解决方案](#常见安装问题与解决方案)
-7. [开发者配置建议](#开发者配置建议)
-8. [结论](#结论)
+5. [AI助手支持](#ai助手支持)
+6. [配置文件与自定义选项](#配置文件与自定义选项)
+7. [常见安装问题与解决方案](#常见安装问题与解决方案)
+8. [开发者配置建议](#开发者配置建议)
+9. [结论](#结论)
 
 ## 简介
 
-`spec-kit` 是一个支持“规范驱动开发”（Spec-Driven Development）的工具包，旨在通过 AI 助手（如 Claude Code、GitHub Copilot、Gemini CLI 等）快速生成高质量软件项目。本指南将详细介绍如何在 Windows、Linux 和 macOS 系统上安装和配置 `spec-kit`，涵盖从 Python 环境设置到项目初始化的完整流程。
+`spec-kit` 是一个支持“规范驱动开发”（Spec-Driven Development）的工具包，旨在通过 AI 助手（如 Claude Code、GitHub Copilot、Gemini CLI、Windsurf 等）快速生成高质量软件项目。本指南将详细介绍如何在 Windows、Linux 和 macOS 系统上安装和配置 `spec-kit`，涵盖从 Python 环境设置到项目初始化的完整流程。
 
 **Section sources**
 - [README.md](file://README.md#L0-L443)
@@ -101,7 +110,7 @@ pip install git+https://github.com/github/spec-kit.git
 ```toml
 [project]
 name = "specify-cli"
-version = "0.0.6"
+version = "0.0.10"
 requires-python = ">=3.11"
 dependencies = [
     "typer",
@@ -121,7 +130,7 @@ dependencies = [
 
 `specify init` 是 `spec-kit` 的核心命令，用于初始化一个新的项目。该命令会执行以下步骤：
 
-1. **选择 AI 助手**：交互式地选择您使用的 AI 编码助手（如 Claude、Gemini、Copilot 等）。
+1. **选择 AI 助手**：交互式地选择您使用的 AI 编码助手（如 Claude、Gemini、Copilot、Windsurf 等）。
 2. **下载模板**：通过 `httpx` 从 GitHub 的最新发布版本中下载对应的模板 ZIP 文件。
 3. **解压并初始化**：将模板解压到指定目录，并可选择性地初始化 Git 仓库。
 
@@ -134,7 +143,7 @@ specify init [OPTIONS] [PROJECT_NAME]
 | 选项/参数 | 类型 | 描述 |
 |---------|------|------|
 | `<project-name>` | 参数 | 新项目的目录名（如果使用 `--here` 则可选） |
-| `--ai` | 选项 | 指定 AI 助手：`claude`, `gemini`, `copilot`, `cursor`, `qwen`, `opencode` |
+| `--ai` | 选项 | 指定 AI 助手：`claude`, `gemini`, `copilot`, `cursor`, `qwen`, `opencode`, `codex`, `windsurf` |
 | `--script` | 选项 | 指定脚本类型：`sh` (Bash/Zsh) 或 `ps` (PowerShell) |
 | `--ignore-agent-tools` | 标志 | 跳过对 AI 助手工具的检查 |
 | `--no-git` | 标志 | 跳过 Git 仓库初始化 |
@@ -191,6 +200,36 @@ CLI-->>User : 项目初始化完成
 **Section sources**
 - [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L724-L799)
 - [README.md](file://README.md#L0-L443)
+
+## AI助手支持
+
+`spec-kit` 支持多种 AI 编码助手，允许团队使用他们偏好的工具，同时保持一致的项目结构和开发实践。
+
+### 当前支持的 AI 助手
+
+| 助手 | 目录 | 格式 | CLI 工具 | 描述 |
+|-------|-----------|---------|----------|-------------|
+| **Claude Code** | `.claude/commands/` | Markdown | `claude` | Anthropic 的 Claude Code CLI |
+| **Gemini CLI** | `.gemini/commands/` | TOML | `gemini` | Google 的 Gemini CLI |
+| **GitHub Copilot** | `.github/prompts/` | Markdown | N/A (IDE-based) | VS Code 中的 GitHub Copilot |
+| **Cursor** | `.cursor/commands/` | Markdown | `cursor-agent` | Cursor CLI |
+| **Qwen Code** | `.qwen/commands/` | TOML | `qwen` | 阿里巴巴的 Qwen Code CLI |
+| **opencode** | `.opencode/command/` | Markdown | `opencode` | opencode CLI |
+| **Codex CLI** | `.codex/commands/` | Markdown | `codex` | OpenAI 的 Codex CLI |
+| **Windsurf** | `.windsurf/workflows/` | Markdown | N/A (IDE-based) | Windsurf IDE 工作流 |
+
+### 添加新 AI 助手支持
+
+要向 `Specify CLI` 添加对新 AI 代理/助手的支持，请遵循 `AGENTS.md` 中的指南。关键步骤包括：
+
+1.  **更新 `AI_CHOICES` 常量**：在 `src/specify_cli/__init__.py` 中添加新的代理。
+2.  **更新 CLI 帮助文本**：在所有帮助文本和示例中包含新代理。
+3.  **更新发布包脚本**：修改 `.github/workflows/scripts/create-release-packages.sh` 以包含新代理。
+4.  **更新代理上下文脚本**：在 `scripts/bash/update-agent-context.sh` 和 `scripts/powershell/update-agent-context.ps1` 中添加对新代理文件的支持。
+
+**Section sources**
+- [AGENTS.md](file://AGENTS.md#L0-L233)
+- [src/specify_cli/__init__.py](file://src/specify_cli/__init__.py#L64-L73)
 
 ## 配置文件与自定义选项
 
@@ -251,13 +290,13 @@ CLI-->>User : 项目初始化完成
 
 根据 `CONTRIBUTING.md` 文件，为贡献者提供以下配置建议：
 
-1. **安装必要工具**：
-   - Python 3.11+
-   - `uv` 包管理器
-   - Git
-   - 一个 AI 编码助手（Claude Code, GitHub Copilot, Gemini CLI, Qwen Code, 或 opencode）
+1.  **安装必要工具**：
+    - Python 3.11+
+    - `uv` 包管理器
+    - Git
+    - 一个 AI 编码助手（Claude Code, GitHub Copilot, Gemini CLI, Cursor, Qwen Code, opencode, Codex CLI, 或 Windsurf）
 
-2. **设置开发环境**：
+2.  **设置开发环境**：
    ```bash
    # Fork 并克隆仓库
    git clone https://github.com/<your-username>/spec-kit.git
@@ -270,7 +309,7 @@ CLI-->>User : 项目初始化完成
    uv run specify --help
    ```
 
-3. **开发工作流**：
+3.  **开发工作流**：
    - 在 `src/specify_cli/` 目录下修改代码。
    - 使用 `specify` CLI 命令在示例项目中测试功能。
    - 确保 `templates/` 和 `scripts/` 目录下的文件正常工作。
